--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,6 @@ name: Build IPA
 
 on:
   workflow_dispatch:
-  push:
-    tags:
-      - 'v*'
 
 jobs:
   build:
@@ -14,49 +11,31 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Select Xcode
-        run: sudo xcode-select -s /Applications/Xcode.app
-
       - name: Resolve Swift Packages
         run: xcodebuild -resolvePackageDependencies
 
       - name: Create build folder
         run: mkdir -p build
 
-      - name: Archive
+      - name: Archive (NO SIGNING)
         run: |
           xcodebuild \
           -scheme KeePassium \
           -configuration Release \
           -destination 'generic/platform=iOS' \
           -archivePath build/KeePassium.xcarchive \
+          CODE_SIGNING_ALLOWED=NO \
           archive
 
-      - name: Create ExportOptions
-        run: |
-          cat <<EOF > ExportOptions.plist
-          <?xml version="1.0" encoding="UTF-8"?>
-          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" 
-          "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-          <plist version="1.0">
-          <dict>
-              <key>method</key>
-              <string>development</string>
-              <key>signingStyle</key>
-              <string>automatic</string>
-          </dict>
-          </plist>
-          EOF
-
-      - name: Export IPA
+      - name: Export IPA (NO SIGNING)
         run: |
           xcodebuild -exportArchive \
           -archivePath build/KeePassium.xcarchive \
-          -exportOptionsPlist ExportOptions.plist \
-          -exportPath build
+          -exportPath build \
+          -exportOptionsPlist /dev/null
 
       - name: Upload IPA
         uses: actions/upload-artifact@v4
         with:
           name: KeePassium
-          path: build/*.ipa
+          path: build
