--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,41 +1,86 @@
-name: Build IPA
+name: Build unsigned IPA
 
 on:
   workflow_dispatch:
+  push:
+    tags:
+      - 'v*'
 
 jobs:
   build:
+    # use a macOS runner that matches Xcode
     runs-on: macos-14
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Resolve Swift Packages
-        run: xcodebuild -resolvePackageDependencies
+      - name: Set up Ruby (for cocoapods if needed)
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.x'
 
-      - name: Create build folder
+      - name: Resolve Swift packages
+        run: xcodebuild -workspace KeePassium.xcworkspace -scheme KeePassium -resolvePackageDependencies
+
+      - name: Create build dir
         run: mkdir -p build
 
-      - name: Archive (NO SIGNING)
+      - name: Archive (unsigned)
         run: |
+          set -o pipefail
           xcodebuild \
-          -scheme KeePassium \
-          -configuration Release \
-          -destination 'generic/platform=iOS' \
-          -archivePath build/KeePassium.xcarchive \
-          CODE_SIGNING_ALLOWED=NO \
-          archive
+            -workspace KeePassium.xcworkspace \
+            -scheme KeePassium \
+            -configuration Release \
+            -destination 'generic/platform=iOS' \
+            -archivePath build/KeePassium.xcarchive \
+            CODE_SIGNING_ALLOWED=NO \
+            CODE_SIGNING_REQUIRED=NO \
+            CODE_SIGN_IDENTITY="" \
+            archive 2>&1 | tee build/xcodebuild-archive.log
 
-      - name: Export IPA (NO SIGNING)
+      - name: Inspect archive contents
         run: |
-          xcodebuild -exportArchive \
-          -archivePath build/KeePassium.xcarchive \
-          -exportPath build \
-          -exportOptionsPlist /dev/null
+          echo "Archive contents:"
+          ls -la build/KeePassium.xcarchive || true
+          ls -la build/KeePassium.xcarchive/Products/Applications || true
 
-      - name: Upload IPA
+      - name: Create unsigned IPA from .app
+        run: |
+          set -e
+          # find the app inside the archive
+          APP_PATH=$(find build/KeePassium.xcarchive -type d -name "*.app" -maxdepth 4 | head -n 1)
+          if [ -z "$APP_PATH" ]; then
+            echo "ERROR: .app not found in archive"
+            echo "Archive listing:"
+            find build/KeePassium.xcarchive -maxdepth 4 -print
+            exit 2
+          fi
+          echo "Found app at: $APP_PATH"
+          # create payload and copy the .app
+          rm -rf Payload
+          mkdir -p Payload
+          cp -R "$APP_PATH" Payload/
+          # ensure correct permissions
+          chmod -R 755 Payload/*.app
+          # zip into an .ipa (use -y to preserve symlinks, -r recursive)
+          ZIP_NAME="KeePassium-unsigned-${GITHUB_REF_NAME:-${GITHUB_RUN_ID}}.ipa"
+          zip -0 -r -y "$ZIP_NAME" Payload
+          mv "$ZIP_NAME" build/
+          echo "IPA created: build/$ZIP_NAME"
+          ls -la build
+
+      - name: Upload IPA as artifact
         uses: actions/upload-artifact@v4
         with:
-          name: KeePassium
-          path: build
+          name: KeePassium-unsigned-ipa
+          path: build/*.ipa
+
+      - name: Optionally create GitHub Release (attach IPA)
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: build/*.ipa
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
